--- a/res/layout/lay_internet.xml
+++ b/res/layout/lay_internet.xml
@@ -4,18 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <Button
-        android:id="@+id/button_get"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="GET" />
+  <ListView
+      android:id="@+id/listView_circuitos"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:divider="@null"
+      android:dividerHeight="0dp" >
 
-    <Button
-        android:id="@+id/button_post"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="POST" />
+    </ListView>
 
 </LinearLayout>
